--- a/ShopTARge24/ShopTARge24/appsettings.json
+++ b/ShopTARge24/ShopTARge24/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopTARge24;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DELL;Database=ShopTARge24;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True;",
   },
 
   "Logging": {
