--- a/ShopTARge24/ShopTARge24.ApplicationServices/ShopTARge24.ApplicationServices.csproj
+++ b/ShopTARge24/ShopTARge24.ApplicationServices/ShopTARge24.ApplicationServices.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ShopTARge24.Data\ShopTARge24.Data.csproj" />
   </ItemGroup>
 
